--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Prof. [Your Name]</title>
+  <title>Prof. Sougata Mukherjea</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -62,57 +62,54 @@
 <body>
 
   <header>
-    <h1>Prof. [Your Full Name]</h1>
-    <p>Professor, Department of [Your Department]</p>
-    <p>[University Name]</p>
+    <h1>Prof. Sougata Mukherjea</h1>
+    <p>Professor of Practice, Computer Technology]</p>
+    <p>Indian Institute of Technology, Delhi</p>
   </header>
 
   <nav>
     <a href="#about">About</a>
     <a href="#research">Research</a>
     <a href="#teaching">Teaching</a>
-    <a href="#publications">Publications</a>
     <a href="#contact">Contact</a>
   </nav>
 
   <div class="container">
     <section id="about">
       <h2>About Me</h2>
-      <p>Welcome to my homepage! I am a Professor in the Department of [Your Department] at [University Name]. My research interests include [list a few topics].</p>
+      <p>I am a Professor of Practice in Computer Technology at Indian Institute of Technology. Delhi. My research interests include Visualization, Cloud, AI and Analytics.</p>
     </section>
 
     <section id="research">
       <h2>Research</h2>
-      <p>My research focuses on [brief description]. I collaborate with academic and industry partners on various interdisciplinary projects.</p>
+       <ul>
+        <li>Visual Analytics for Explainable AI</li>
+        <li>LLMs for Visualization Tasks</li>
+        <li>Analysis of Microservices</li>
+      </ul>
     </section>
 
     <section id="teaching">
       <h2>Teaching</h2>
       <ul>
-        <li>Course 1 – Semester</li>
-        <li>Course 2 – Semester</li>
-        <li>Course 3 – Semester</li>
+        <li>Software Fundamentals</li>
+        <li>Social Network Analysis</li>
+        <li>Cloud Computing</li>
+        <li>Visualization</li>
       </ul>
     </section>
 
-    <section id="publications">
-      <h2>Selected Publications</h2>
-      <ul>
-        <li>Author1, Author2. *Title of the Paper*. Journal, Year.</li>
-        <li>Author1, Author2. *Title of the Paper*. Conference, Year.</li>
-      </ul>
-    </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: your.email@university.edu</p>
-      <p>Office: Room ###, Building Name, Campus</p>
-      <p>Phone: +91-XXX-XXXXXXX</p>
+      <p>Email: sougatam@iitd.ac.in</p>
+      <p>Office: Room 243, Block II, IIT Delhi</p>
+      <p>Phone: +91-9810886820</p>
     </section>
   </div>
 
   <footer>
-    <p>&copy; 2025 Prof. [Your Name] · Last updated: June 2025</p>
+    <p>&copy; 2025 Prof. Sougata Mukherjea· Last updated: June 2025</p>
   </footer>
 
 </body>
