--- a/index.html
+++ b/index.html
@@ -68,15 +68,14 @@
   </header>
 
   <nav>
-    <a href="#about">About</a>
+    <a href="#intro">Introduction</a>
     <a href="#research">Research</a>
     <a href="#teaching">Teaching</a>
     <a href="#contact">Contact</a>
   </nav>
 
   <div class="container">
-    <section id="about">
-      <h2>About Me</h2>
+    <section id="intro">
       <p>I am a Professor of Practice in Computer Technology at Indian Institute of Technology. Delhi. My research interests include Visualization, Cloud, AI and Analytics.</p>
     </section>
 
@@ -84,6 +83,7 @@
       <h2>Research</h2>
        <ul>
         <li>Visual Analytics for Explainable AI</li>
+             https://github.com/soumukh/DELPHI
         <li>LLMs for Visualization Tasks</li>
         <li>Analysis of Microservices</li>
       </ul>
