--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
       <h2>Research</h2>
        <ul>
         <li>Visual Analytics for Explainable AI</li>
-             https://github.com/soumukh/DELPHI
-        <li>LLMs for Visualization Tasks</li>
-        <li>Analysis of Microservices</li>
+             <a href="https://github.com/soumukh/DELPHI">CNN</a>
+             <a href="https://github.com/soumukh/GNN_Vis">GNN</a>
       </ul>
     </section>
 
