--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Prof. Sougata Mukherjea</title>
+  <title>Sougata Mukherjea</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -62,7 +62,7 @@
 <body>
 
   <header>
-    <h1>Prof. Sougata Mukherjea</h1>
+    <h1>Sougata Mukherjea, PhD</h1>
     <p>Professor of Practice, Computer Technology]</p>
     <p>Indian Institute of Technology, Delhi</p>
   </header>
@@ -83,8 +83,10 @@
       <h2>Research</h2>
        <ul>
         <li>Visual Analytics for Explainable AI</li>
-             <a href="https://github.com/soumukh/DELPHI">CNN</a>
-             <a href="https://github.com/soumukh/GNN_Vis">GNN</a>
+            <ul>
+             <li></li> <a href="https://github.com/soumukh/DELPHI">CNN</a> </li>
+             <li> </li><a href="https://github.com/soumukh/GNN_Vis">GNN</a> </li>
+            </ul>
       </ul>
     </section>
 
