--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
        <ul>
         <li>Visual Analytics for Explainable AI</li>
             <ul>
-             <li></li> <a href="https://github.com/soumukh/DELPHI">CNN</a> </li>
-             <li> </li><a href="https://github.com/soumukh/GNN_Vis">GNN</a> </li>
+             <li> <a href="https://github.com/soumukh/DELPHI">CNN</a> </li>
+             <li> <a href="https://github.com/soumukh/GNN_Vis">GNN</a> </li>
             </ul>
       </ul>
     </section>
