--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <header>
     <h1>Sougata Mukherjea, PhD</h1>
-    <p>Professor of Practice, Computer Technology]</p>
+    <p>Professor of Practice, Computer Technology</p>
     <p>Indian Institute of Technology, Delhi</p>
   </header>
 
