--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
              <li> <a href="https://github.com/soumukh/DELPHI">CNN</a> </li>
              <li> <a href="https://github.com/soumukh/GNN_Vis">GNN</a> </li>
             </ul>
+         <li>Applications of LLMs</li>
+             <li> <a href="https://link.springer.com/epdf/10.1007/s44248-025-00036-4?sharing_token=1TsLqlW0s7uIWtwPfapm6Pe4RwlQNchNByi7wbcMAY5ld7wEDf9j6nfG0WIjOtrkxDqYcyMaSHONz12uUnGwhVpoZvvCiFkSRlkfVyU61HMp6f9KjZ_IqsqmWYY5OVhZldycXJmPa6C52umDolo2oSglaAAfb7oV9jPvYDWVqCI%3D">Visualization</a> </li>
+          </ul>
       </ul>
     </section>
 
