--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <a href="#intro">Introduction</a>
     <a href="#research">Research</a>
     <a href="#teaching">Teaching</a>
+     <a href="#links">Links</a>
     <a href="#contact">Contact</a>
   </nav>
 
@@ -104,6 +105,14 @@
       </ul>
     </section>
 
+     <section id="links">
+      <h2>Links</h2>
+       <ul>
+             <li> <a href="https://www.linkedin.com/in/sougatamukherjea/">LinkedIn</a> </li>
+             <li> <a href="https://scholar.google.co.in/citations?hl=en&user=XvzQCQMAAAAJ">Google Scholar</a> </li>
+        </ul>
+
+    </section>
 
     <section id="contact">
       <h2>Contact</h2>
