--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </ul>
         <li>Applications of LLMs</li>
             <ul>
-             <li> <a href="https://link.springer.com/epdf/10.1007/s44248-025-00036-4?sharing_token=1TsLqlW0s7uIWtwPfapm6Pe4RwlQNchNByi7wbcMAY5ld7wEDf9j6nfG0WIjOtrkxDqYcyMaSHONz12uUnGwhVpoZvvCiFkSRlkfVyU61HMp6f9KjZ_IqsqmWYY5OVhZldycXJmPa6C52umDolo2oSglaAAfb7oV9jPvYDWVqCI%3D">Visualization</a> </li>
+             <li> <a href="https://github.com/soumukh/Vis_LLM">Visualization</a> </li>
            </ul>
 </ul>
     </section>
@@ -128,3 +128,4 @@
 
 </body>
 </html>
+
