--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </section>
 
     <section id="research">
-      <h2>Research</h2>
+      <h2>Current Research</h2>
        <ul>
         <li>Visual Analytics for Explainable AI</li>
             <ul>
@@ -128,4 +128,5 @@
 
 </body>
 </html>
+
 
