--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@
             <ul>
              <li> <a href="https://github.com/soumukh/Vis_LLM">Visualization</a> </li>
            </ul>
-</ul>
+         <li>Cloud</li>
+            <ul>
+             <li> <a href="https://github.com/soumukh/Blending">Blended deployment of microservices</a> </li>
+            </ul>
+   </ul>
     </section>
 
     <section id="teaching">
@@ -128,5 +132,6 @@
 
 </body>
 </html>
+
 
 
