--- a/index.html
+++ b/index.html
@@ -61,11 +61,15 @@
 </head>
 <body>
 
-  <header>
+<header class="profile-header">
+  <div class="header-text">
     <h1>Sougata Mukherjea, PhD</h1>
     <p>Professor of Practice, Computer Technology</p>
     <p>Indian Institute of Technology, Delhi</p>
-  </header>
+  </div>
+  <!-- Replace 'path/to/your/logo.png' with your logo file path -->
+  <img src="iitd_logo.png" alt="IIT Delhi Logo" class="header-logo">
+</header>
 
   <nav>
     <a href="#intro">Introduction</a>
@@ -132,6 +136,7 @@
 
 </body>
 </html>
+
 
 
 
