--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <p>Indian Institute of Technology, Delhi</p>
   </div>
   <!-- Replace 'path/to/your/logo.png' with your logo file path -->
-  <img src="IITD_Logo.jpg" alt="IIT Delhi Logo" class="header-logo">
+  <img src="https://soumukh.github.io/IITD_Logo.jpg" alt="IIT Delhi Logo" class="header-logo">
 </header>
 
   <nav>
@@ -136,6 +136,7 @@
 
 </body>
 </html>
+
 
 
 
