--- a/index.html
+++ b/index.html
@@ -61,14 +61,10 @@
 </head>
 <body>
 
-<header class="profile-header">
-  <div class="header-text">
+<header>
     <h1>Sougata Mukherjea, PhD</h1>
     <p>Professor of Practice, Computer Technology</p>
     <p>Indian Institute of Technology, Delhi</p>
-  </div>
-  <!-- Replace 'path/to/your/logo.png' with your logo file path -->
-  <img src="https://soumukh.github.io/IITD_Logo.jpg" alt="IIT Delhi Logo" class="header-logo">
 </header>
 
   <nav>
@@ -136,6 +132,7 @@
 
 </body>
 </html>
+
 
 
 
