--- a/index.html
+++ b/index.html
@@ -71,13 +71,14 @@
     <a href="#intro">Introduction</a>
     <a href="#research">Research</a>
     <a href="#teaching">Teaching</a>
-     <a href="#links">Links</a>
+     <a href="#pub">Publications</a>
     <a href="#contact">Contact</a>
   </nav>
 
   <div class="container">
     <section id="intro">
       <p>I am a Professor of Practice in Computer Technology at Indian Institute of Technology. Delhi. My research interests include Visualization, Cloud, AI and Analytics.</p>
+      <p> <a href="https://www.linkedin.com/in/sougatamukherjea/">LinkedIn</a> </p>
     </section>
 
     <section id="research">
@@ -109,11 +110,11 @@
       </ul>
     </section>
 
-     <section id="links">
+     <section id="pub">
       <h2>Links</h2>
        <ul>
-             <li> <a href="https://www.linkedin.com/in/sougatamukherjea/">LinkedIn</a> </li>
              <li> <a href="https://scholar.google.co.in/citations?hl=en&user=XvzQCQMAAAAJ">Google Scholar</a> </li>
+             <li> <a href="https://github.com/soumukh/InfovisBook">Information Visualization book</a> </li>
         </ul>
 
     </section>
@@ -132,6 +133,7 @@
 
 </body>
 </html>
+
 
 
 
