--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <div class="container">
     <section id="intro">
-      <p>I am a Professor of Practice in Computer Technology at Indian Institute of Technology. Delhi. My research interests include Visualization, Cloud, AI and Analytics.</p>
+      <p>I am a Professor of Practice in Computer Technology at Indian Institute of Technology. Delhi. My research interests include Analytics, Cloud, Deep Learning and Visualization.</p>
       <p> <a href="https://www.linkedin.com/in/sougatamukherjea/">LinkedIn</a> </p>
     </section>
 
@@ -133,6 +133,7 @@
 
 </body>
 </html>
+
 
 
 
